--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
 
 /* SHADOW */
 .shadow {
   box-shadow: 0px 1px 32px 0px #50505040;
   z-index: 999999;
+}
+
+.contact {
+  box-shadow: 0px 11.53px 56.62px 0px #00000030;
 }
