--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@ body {
 .contact {
   box-shadow: 0px 11.53px 56.62px 0px #00000030;
 }
+
+.about {
+  box-shadow: 0px 9px 30.9px -2px #00000021;
+}
