--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Syne:wght@400..800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -13,13 +14,21 @@ body {
   scroll-behavior: smooth;
 }
 
+.event {
+  font-family: "Syne", sans-serif;
+}
+
+.events {
+  font-family: "Sora", sans-serif;
+}
+
 .home {
   background-image: linear-gradient(
     to right,
     #fef9f3 0%,
     #fef9f3 70%,
-    #e78707 70%,
-    #e78707 100%
+    #fef9f3 70%,
+    #fef9f3 100%
   );
 }
 
@@ -48,4 +57,8 @@ body {
 
 .about {
   box-shadow: 0px 9px 30.9px -2px #00000021;
+}
+
+.eventShadow {
+  box-shadow: 0px 11px 35.6px 0px #00000012;
 }
