--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,7 @@ body {
 .eventShadow {
   box-shadow: 0px 11px 35.6px 0px #00000012;
 }
+
+.cart {
+  box-shadow: 0px 11px 44.9px 0px #c9c9c940;
+}
