--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,13 @@ body {
 .cart {
   box-shadow: 0px 11px 44.9px 0px #c9c9c940;
 }
+
+/* FONT SIZE */
+
+.h2 {
+  font-size: 3vw;
+}
+
+.p {
+  font-size: 0.8vw;
+}
